@@ -3,6 +3,9 @@ AjLanguage
 
 An interpreter written in C# to use as a core implementation of AjBasic, AjSharp and other experiments.
 
+More info at:
+http://ajlopez.wordpress.com/category/ajsharp/
+
 By Angel "Java" Lopez
 http://www.ajlopez.com/en
 http://ajlopez.wordpress.com
