@@ -58,6 +58,8 @@
     <Compile Include="Compiler\UnexpectedEndOfInputException.cs" />
     <Compile Include="Compiler\UnexpectedTokenException.cs" />
     <Compile Include="AjSharpMachine.cs" />
+    <Compile Include="Primitives\ExecuteSubroutine.cs" />
+    <Compile Include="Primitives\EvaluateFunction.cs" />
     <Compile Include="Primitives\IncludeSubroutine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
